--- a/stylee.css
+++ b/stylee.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    min-width: 300px;
+    max-width: 1000px;
 }
 
 body {
