--- a/stylee.css
+++ b/stylee.css
@@ -16,6 +16,8 @@ body {
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    min-width: 200px;
+    max-width: 1000px;
 }
 
 .container {
